last attempt to get routes working

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "musicomp",
+  "name": "musiComp",
   "version": "1.0.0",
   "description": "a tool to create a song structure",
   "main": "index.js",
