--- a/package.json
+++ b/package.json
@@ -14,42 +14,36 @@
     "angular-aria": "^1.4.7",
     "angular-material": "^0.11.4",
     "angular-messages": "^1.4.8",
+    "angular-mocks": "^1.5.5",
     "body-parser": "^1.14.0",
     "connect-livereload": "^0.5.4",
     "del": "^2.0.2",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
-    "gulp-angular-templatecache": "^1.7.0",
-    "gulp-autoprefixer": "^3.0.2",
-    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-ignore": "^2.0.1",
+    "gulp-coveralls": "^0.1.4",
+    "gulp-istanbul": "^0.10.4",
     "gulp-jasmine": "^2.1.0",
     "gulp-jshint": "^1.11.2",
     "gulp-karma": "0.0.5",
     "gulp-live-server": "0.0.29",
     "gulp-ng-templates": "0.0.6",
-    "gulp-rename": "^1.2.2",
-    "gulp-ruby-sass": "^2.0.4",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
-    "htmlmin": "0.0.4",
     "jasmine-core": "^2.3.4",
+    "jshint-stylish": "^2.2.0",
     "karma": "^0.13.10",
     "karma-chrome-launcher": "^0.2.0",
+    "karma-coverage": "^1.0.0",
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6",
     "karma-opera-launcher": "^0.3.0",
     "karma-phantomjs-launcher": "^0.2.1",
-    "mocha": "^2.4.5",
-    "node-sass": "^3.4.2",
     "phantomjs": "^1.9.18",
     "require-dir": "^0.3.0",
-    "run-sequence": "^1.1.5",
-    "tiny-lr": "^0.2.0"
+    "run-sequence": "^1.1.5"
   },
   "scripts": {
     "start": "gulp start",
@@ -59,12 +53,9 @@
     "angular": "^1.4.6",
     "angular-resource": "^1.4.7",
     "angular-route": "^1.4.6",
-    "http-status": "^0.2.0",
     "lodash": "^4.11.1",
     "mkdirp": "^0.5.1",
     "mongoose": "^4.4.5",
-    "simple-node-logger": "^0.93.12",
-    "superagent": "^1.7.2",
-    "wagner-core": "^0.2.0"
+    "simple-node-logger": "^0.93.12"
   }
 }
