--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "karma-jasmine": "^0.3.6",
     "karma-opera-launcher": "^0.3.0",
     "karma-phantomjs-launcher": "^0.2.1",
+    "mockery": "^1.7.0",
     "phantomjs": "^1.9.18",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5"
