commented out postinstall script

--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     "build": "gulp build",
     "coveralls": "gulp coveralls",
     "travis": "gulp templates test --prod",
-    "postinstall": "gulp clean && gulp templates && gulp bundle-lib 
-    && gulp bundle-app && gulp compileSass && gulp pipeMaterialCss
-     && gulp copy"
+    // "postinstall": "gulp clean && gulp templates && gulp bundle-lib 
+    // && gulp bundle-app && gulp compileSass && gulp pipeMaterialCss
+    //  && gulp copy"
   },
   "dependencies": {
     "angular": "^1.4.7",
