commented out postinstall script again

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "test": "gulp test",
     "build": "gulp build",
     "coveralls": "gulp coveralls",
-    "travis": "gulp templates test --prod",
+    "travis": "gulp templates test --prod"
     // "postinstall": "gulp clean && gulp templates && gulp bundle-lib 
     // && gulp bundle-app && gulp compileSass && gulp pipeMaterialCss
     //  && gulp copy"
