work to fix build for Ernest

--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "mockery": "^1.7.0",
     "phantomjs": "^2.0.0",
     "require-dir": "^0.3.0",
-    "run-sequence": "^1.1.5",
-    "yargs": "^4.7.1"
+    "run-sequence": "^1.1.5"
   },
   "scripts": {
     "start": "gulp start --prod",
